fix: ui fixes
- show chat in small screen
- smaller editor font size
- editor dont hide overflow bc tooltip overflows
- fixed orange tabbing focus ring to accessibility blue

--- a/electron/frontend/app/globals.css
+++ b/electron/frontend/app/globals.css
@@ -36,8 +36,7 @@
 
         --border: hsl(214.3 31.8% 91.4%);
         --input: hsl(214.3 31.8% 91.4%);
-        --ring: hsl(222.2 84% 4.9%);
-
+        --ring: white;
         --radius: 0.5rem;
     }
 
@@ -69,7 +68,7 @@
 
         --border: var(--dark-outline);
         --input: var(--dark-outline);
-        --ring: hsl(212.7 26.8% 83.9%);
+        --ring: white;
     }
 }
 
@@ -86,6 +85,12 @@
 
     html {
         font-size: 85%;
+    }
+
+    *:focus-visible {
+        outline: 1px solid #2353cc;
+        border-radius: 3px;
+        /* box-shadow: 0 0 0 1px white; */
     }
 }
 
